--- a/week-3/01-middlewares/package.json
+++ b/week-3/01-middlewares/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.23.3",
+    "@types/babel__generator": "^7.6.8",
     "eslint-plugin-jest": "^27.6.0",
     "ts-node": "^10.9.2"
   }
